@@ -1568,7 +1568,6 @@ func_all_modules ()
   func_begin_table
   func_module argmatch
   func_module version-etc
-  func_module version-etc-2
   func_module long-options
   func_end_table
 
