@@ -1,3 +1,8 @@
+2003-10-06  Bruno Haible  <bruno@clisp.org>
+
+	* version-etc-2.h: Remove file.
+	* version-etc-2.c: Remove file.
+
 2003-09-25  Jim Meyering  <jim@meyering.net>
             Bruno Haible  <bruno@clisp.org>
 
